--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Reto 1</title>
 </head>
 <body>
-    <img src="/assets/categoria1.jpg" alt="">
+    <img src="/assets/categoria1.jpg" alt="img">
     <h1>Checkout</h1>
     <form>
         <div>
